[package]
name = "uni-sqlite"
version = "0.1.0"
authors = ["Sam Atagana <sam@samatagana.com>"]
edition = "2024"
description = "A clean, focused SQLite administration MCP server"

[dependencies]
# Error handling
anyhow = "1.0"
# Time handling
chrono = "0.4"
# CSV support
csv = "1.3"
glob = "0.3"
# Binary encoding
hex = "0.4"
# Path handling
home = "0.5"
# MCP framework
rmcp = { version = "0.6.0", features = ["macros", "transport-io"] }
# SQLite
rusqlite = { version = "0.32", features = [
  "backup",
  "blob",
  "bundled",
  "chrono",
  "csvtab",
  "functions",
  "serde_json",
  "trace",
  "vtab",
] }
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
# Core async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-util = "0.7"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
